--- a/diary/2012-10-23.wiki
+++ b/diary/2012-10-23.wiki
@@ -1,16 +1,16 @@
 === 2012-10-23 ===
 
-ÊÛÇ°ÍÅ¶Ó´æÔÚµÄÎÊÌâ£º
-1. ×¼±¸¹¤×÷±ØÐë×öºÃ£»
-2. ¹¤×÷·½·¨£¬½»Á÷£»
-3. Ö°Òµ»¯£¬Ê±¿ÌÑ§Ï°£¬¶Ô¹¤×÷ÈÎÎñÓÐ·´À¡£¬ÎÄµµÐ´×÷ÓÃ´Ê¹æ·¶£»
+å”®å‰å›¢é˜Ÿå­˜åœ¨çš„é—®é¢˜ï¼š
+1. å‡†å¤‡å·¥ä½œå¿…é¡»åšå¥½ï¼›
+2. å·¥ä½œæ–¹æ³•ï¼Œäº¤æµï¼›
+3. èŒä¸šåŒ–ï¼Œæ—¶åˆ»å­¦ä¹ ï¼Œå¯¹å·¥ä½œä»»åŠ¡æœ‰åé¦ˆï¼Œæ–‡æ¡£å†™ä½œç”¨è¯è§„èŒƒï¼›
 
-¹¤×÷¼Æ»®£º
-1. ÖÜ¶þÏÂÎçÕûÀíÐèÇó£»
-2. ÖÜÈýÉÏÎçÈ¥¿ª·¢ÌÖÂÛÐèÇó£»
-3. ÖÜÈýÏÂÎçÊä³öÐèÇó·ÖÎöÎÄµµºÍ¿Í»§µÄÒµÎñÃèÊöÎÄµµ£»
-4. ÖÜËÄÌÖÂÛÐ¡Ã·¡¢³Â×Ü¸øÎÄµµµÄÅú×¢£»
-5. ÖÜËÄÊä³ö±¾ÖÜ¹¤×÷³É¹û£»
-6. ÖÜËÄÌÖÂÛµç×Ó»¤ÕÕ·½°¸£»
-6. ÖÜÎå°²ÅÅÐèÇóÌÖÂÛ£»
+å·¥ä½œè®¡åˆ’ï¼š
+1. å‘¨äºŒä¸‹åˆæ•´ç†éœ€æ±‚ï¼›
+2. å‘¨ä¸‰ä¸ŠåˆåŽ»å¼€å‘è®¨è®ºéœ€æ±‚ï¼›
+3. å‘¨ä¸‰ä¸‹åˆè¾“å‡ºéœ€æ±‚åˆ†æžæ–‡æ¡£å’Œå®¢æˆ·çš„ä¸šåŠ¡æè¿°æ–‡æ¡£ï¼›
+4. å‘¨å››è®¨è®ºå°æ¢…ã€é™ˆæ€»ç»™æ–‡æ¡£çš„æ‰¹æ³¨ï¼›
+5. å‘¨å››è¾“å‡ºæœ¬å‘¨å·¥ä½œæˆæžœï¼›
+6. å‘¨å››è®¨è®ºç”µå­æŠ¤ç…§æ–¹æ¡ˆï¼›
+6. å‘¨äº”å®‰æŽ’éœ€æ±‚è®¨è®ºï¼›
 
