--- a/diary/2012-10-18.wiki
+++ b/diary/2012-10-18.wiki
@@ -1,51 +1,51 @@
 = 2012*10*18 =
 
-ÕâÁ½ÌìÔÚ¿´[[Âí²®Ó¹]]µÄÐ¡Ëµ¡¶[[±ÊÚ£ËæÂ¼]]¡·¡£
+è¿™ä¸¤å¤©åœ¨çœ‹[[é©¬ä¼¯åº¸]]çš„å°è¯´ã€Š[[ç¬”å†¢éšå½•]]ã€‹ã€‚
 
-ÕûÀíÁË×Ô¼ºµÄ¹¤×÷Ë¼Â·£¬´óÖÂÓÐÒÔÏÂÊÂÇéÐèÒª×ö¡£
-
-
-=== ÏîÄ¿ ===
-# ¶þÆÚÍ¶±ê·½°¸×¼±¸
-	* Ö¸ÎÆÒÇ·½°¸È·ÈÏ ºÍ¿ª·¢ÈÕ³ÌÈ·ÈÏ£»
-
-# µç×Ó»¤ÕÕ·½°¸º£ÍâÍØÕ¹
-	* ×¼±¸µç×Ó»¤ÕÕ·½°¸½éÉÜ½ºÆ¬£»
-	* ÏÂÖÜ¶þ23ºÅ£¬¸øµç×Ó½ø³ö¿Ú¹«Ë¾×ö·½°¸½éÉÜ£»
-
-=== ÊÐ³¡¹æ»® ===
-# Íê³É¹«Ë¾»ã±¨½ºÆ¬
-	* ÕûÀí¹«Ë¾ÀíÄî¡¢Ê¹ÃüºÍÔ¸¾°£»
-
-# »ã×Ü¹«Ë¾µ±Ç°ÏîÄ¿£¬¸÷Ê¡ÊÐÍâ°ì»ú»áµã¡¢¾ö²ßÁ´£»
+æ•´ç†äº†è‡ªå·±çš„å·¥ä½œæ€è·¯ï¼Œå¤§è‡´æœ‰ä»¥ä¸‹äº‹æƒ…éœ€è¦åšã€‚
 
 
-=== ÍÅ¶Ó½¨Éè ===
-# ÊÛÇ°ÍÅ¶Ó½¨Éè
-	* ÍÅ¶ÓÄÜÁ¦ÌáÉý£¬´ïµ½ÁùÏî¹¤×÷µÄÒªÇó
-		* ÏîÄ¿Ö§³Ö£¬ÐèÇó¹ÜÀí£¬ÎÄµµÐ´×÷£¬¿ª·¢¼à¿Ø£¬½»¸¶·çÏÕ¿ØÖÆ£¬ºÏ×÷·½¹ÜÀí£»
-	* ²ÎÓëµ½¿ª·¢ÍÅ¶ÓµÄÉè¼Æ¡¢¹æ»®¡¢ÎÄµµÐ´×÷¹¤×÷£»
-	* ÊáÀíµ±Ç°ÕýÔÚ½»¸¶µÄÏîÄ¿£¬°ïÖúÏúÊÛÀíÇå¿Í»§¹ØÏµ£¬Ñ°ÕÒ»ú»áµã£»
-	* ÊáÀí¹«Ë¾µ±Ç°²úÆ·¡¢½â¾ö·½°¸ºÍ¹æ»®£»
-	* ºÍÏúÊÛÍÅ¶Ó×é³É´îµµ£»
+=== é¡¹ç›® ===
+# äºŒæœŸæŠ•æ ‡æ–¹æ¡ˆå‡†å¤‡
+	* æŒ‡çº¹ä»ªæ–¹æ¡ˆç¡®è®¤ å’Œå¼€å‘æ—¥ç¨‹ç¡®è®¤ï¼›
 
-# ÏúÊÛÍÅ¶Ó½¨Éè
-	* ¸÷Ê¡ÊÐÍâ°ì·Ö¹¤£»
+# ç”µå­æŠ¤ç…§æ–¹æ¡ˆæµ·å¤–æ‹“å±•
+	* å‡†å¤‡ç”µå­æŠ¤ç…§æ–¹æ¡ˆä»‹ç»èƒ¶ç‰‡ï¼›
+	* ä¸‹å‘¨äºŒ23å·ï¼Œç»™ç”µå­è¿›å‡ºå£å…¬å¸åšæ–¹æ¡ˆä»‹ç»ï¼›
 
-# ¿ª·¢¹Ç¸ÉÅàÑø
-	* ÏµÍ³Éè¼Æ×¨¼Ò£»
-	* Èí¼þ¿ª·¢Ö÷¹Ü£»
+=== å¸‚åœºè§„åˆ’ ===
+# å®Œæˆå…¬å¸æ±‡æŠ¥èƒ¶ç‰‡
+	* æ•´ç†å…¬å¸ç†å¿µã€ä½¿å‘½å’Œæ„¿æ™¯ï¼›
 
-# »ù²ãÖ÷¹ÜÅàÑø
-	* ¹ÜÀíÄÜÁ¦ÌáÉý£»
-	* ÊÚÈ¨£»
-	* ³¤ÆÚÐ½³ê¼Æ»®£»
+# æ±‡æ€»å…¬å¸å½“å‰é¡¹ç›®ï¼Œå„çœå¸‚å¤–åŠžæœºä¼šç‚¹ã€å†³ç­–é“¾ï¼›
 
-=== ÐÐÕþºóÇÚ ===
-# ÎÞÏßÍøÂçµÄIP MAC°ó¶¨£»
-# °ì¹«ÊÒºÍ¿ª·¢ÖÐÐÄÔö¼ÓÎ¢²¨Â¯£¬±ùÏä£»
 
-ÕâÁ½Ìì¹¤×÷Ã»ÓÐÌ«¶Ø´ÙÊÛÇ°ÍÅ¶ÓÊä³ö²ÄÁÏ£¬±»¿ª·¢²¿ÃÅÔðÎÊÁË¡£
+=== å›¢é˜Ÿå»ºè®¾ ===
+# å”®å‰å›¢é˜Ÿå»ºè®¾
+	* å›¢é˜Ÿèƒ½åŠ›æå‡ï¼Œè¾¾åˆ°å…­é¡¹å·¥ä½œçš„è¦æ±‚
+		* é¡¹ç›®æ”¯æŒï¼Œéœ€æ±‚ç®¡ç†ï¼Œæ–‡æ¡£å†™ä½œï¼Œå¼€å‘ç›‘æŽ§ï¼Œäº¤ä»˜é£Žé™©æŽ§åˆ¶ï¼Œåˆä½œæ–¹ç®¡ç†ï¼›
+	* å‚ä¸Žåˆ°å¼€å‘å›¢é˜Ÿçš„è®¾è®¡ã€è§„åˆ’ã€æ–‡æ¡£å†™ä½œå·¥ä½œï¼›
+	* æ¢³ç†å½“å‰æ­£åœ¨äº¤ä»˜çš„é¡¹ç›®ï¼Œå¸®åŠ©é”€å”®ç†æ¸…å®¢æˆ·å…³ç³»ï¼Œå¯»æ‰¾æœºä¼šç‚¹ï¼›
+	* æ¢³ç†å…¬å¸å½“å‰äº§å“ã€è§£å†³æ–¹æ¡ˆå’Œè§„åˆ’ï¼›
+	* å’Œé”€å”®å›¢é˜Ÿç»„æˆæ­æ¡£ï¼›
+
+# é”€å”®å›¢é˜Ÿå»ºè®¾
+	* å„çœå¸‚å¤–åŠžåˆ†å·¥ï¼›
+
+# å¼€å‘éª¨å¹²åŸ¹å…»
+	* ç³»ç»Ÿè®¾è®¡ä¸“å®¶ï¼›
+	* è½¯ä»¶å¼€å‘ä¸»ç®¡ï¼›
+
+# åŸºå±‚ä¸»ç®¡åŸ¹å…»
+	* ç®¡ç†èƒ½åŠ›æå‡ï¼›
+	* æŽˆæƒï¼›
+	* é•¿æœŸè–ªé…¬è®¡åˆ’ï¼›
+
+=== è¡Œæ”¿åŽå‹¤ ===
+# æ— çº¿ç½‘ç»œçš„IP MACç»‘å®šï¼›
+# åŠžå…¬å®¤å’Œå¼€å‘ä¸­å¿ƒå¢žåŠ å¾®æ³¢ç‚‰ï¼Œå†°ç®±ï¼›
+
+è¿™ä¸¤å¤©å·¥ä½œæ²¡æœ‰å¤ªæ•¦ä¿ƒå”®å‰å›¢é˜Ÿè¾“å‡ºææ–™ï¼Œè¢«å¼€å‘éƒ¨é—¨è´£é—®äº†ã€‚
 
 
 
